<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:isScrollContainer="true"
>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/actionBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.NeRecipe.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.NeRecipe.AppBarOverlay"
            >

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_margin="@dimen/common_indent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:minWidth="48dp"
                android:src="@drawable/ic_baseline_arrow_back_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titlePage"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/app_name"/>
            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="@dimen/common_indent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save"
                android:src="@drawable/ic_baseline_check_24dp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/inner_indent"

        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentTitle"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptionTitle"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/categoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoryTitle"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryTitle"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stepsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stepsTitle"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/addButton"
            app:layout_constraintTop_toBottomOf="@id/stepsTitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/step"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/stepImagePreview"
            />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/common_indent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_baseline_add_24dp"
            app:layout_constraintBottom_toBottomOf="@id/step"
            app:layout_constraintLeft_toRightOf="@+id/step"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stepsTitle"
            app:layout_constraintTop_toTopOf="@id/step" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stepsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/stepImagePreview"
            tools:listitem="@layout/step_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
